Added infinite scrolling to the search page. Removed machine specific config options. Added a few templated jade files and the new screen template.

--- a/views/connect.jade
+++ b/views/connect.jade
@@ -13,4 +13,5 @@ html(ng-app='fidgetStream')
         script(src="/angular/angular.min.js")
         script(src="/angular-socket-io/socket.js")
         script(src="/socket.io-client/dist/socket.io.js")
+        script(src='/bootstrap/dist/js/bootstrap.min.js')
         script(src="/app.js")
