--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,13 +3,22 @@
 }
 
 #search-results {
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 .thumbnail{
     margin-bottom:0px;
+    cursor: pointer;
 }
 
 .stream{
     margin-bottom:5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
+
+.clear{
+    clear: both;
+}
+
