Added loading logic and loading limit logic to the stream section of the page.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@
 }
 
 #search-results {
-    margin-top: 15px;
+    margin-top: 20px;
 }
 
 .thumbnail{
@@ -16,6 +16,13 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.stream-status{
+    display:inline-block;
+}
+
+.loading{
 }
 
 .clear{
