--- a/views/search.jade
+++ b/views/search.jade
@@ -14,7 +14,8 @@ html(ng-app='fidgetStream')
            h1 Fidget Remote
                 br
                 small  A Twitch.tv Remote
-           div(class='col-lg-12 col-sm-12' infinite-scroll='loadNext()' infinite-scroll-scroll-distance='2' infinite-scroll-immediate-check='false')
+           div(class='col-lg-12 col-sm-12' infinite-scroll='loadNext()' infinite-scroll-scroll-distance='4' infinite-scroll-diabled='loading')
+
                .input-group
                    input(type='text' class='form-control' placeholder='Search' ng-model='query')
                    span(class='input-group-btn')
@@ -24,6 +25,8 @@ html(ng-app='fidgetStream')
                div(id='search-results' )
                    twitch-stream(class="col-lg-4 game-result" ng-repeat="stream in streams" stream="stream" stream-click='play' )
                div(class='clear')
+           div(ng-show='streams.length' class='col-lg-12 col-sm-12 loading')
+               h2(class='text-center') Loading more streams...
 
        script(src='/jquery/jquery.min.js')
        script(src="/angular/angular.min.js")
