--- a/public/js/templates/screen.html
+++ b/public/js/templates/screen.html
@@ -1,17 +1,5 @@
-<object type="application/x-shockwave-flash"
-        height="350"
-        width="640"
-        id="live_embed_player_flash"
-        data="{{channel.objectData}}"
-        bgcolor="#000000">
-    <param  name="allowFullScreen"
-            value="true" />
-    <param  name="allowScriptAccess"
-            value="always" />
-    <param  name="allowNetworking"
-            value="all" />
-    <param  name="movie"
-            value="http://www.twitch.tv/widgets/live_embed_player.swf" />
-    <param  name="flashvars"
-            value="{{channel.flashVars}}" />
-</object>
+<div>
+    <span class='stream-status'>{{channel.status}}</span>
+    <player channel="channel"/>
+
+</div>
