--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,8 +1,23 @@
 html{
-    height: 100%;
+    width: 100%;
 }
 body{
     background-color: #6441A5;
-    height:100%;
+    width:100%;
+    color: #fff;
+}
+
+#about{
+    font-family: "Lato",sans-serif;
+    background-color: #34156B;
+    font-weight: lighter;
+    font-style: italic;
+    font-size: 24px;
+    width: 100%;
+    padding-top: 70px;
+}
+
+#about > h3{
+    font-weight: bold;
 }
 
