--- a/public/views/partials/nav.jade
+++ b/public/views/partials/nav.jade
@@ -3,19 +3,25 @@
    Email: brendan.betts@live.com
 link(href="/css/nav.css" rel="stylesheet")
 
-nav.navbar.navbar-inverse(role='navigation')
-    .container-fluid
-        // Brand and toggle get grouped for better mobile display
-        .navbar-header
-            button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+    .container
+        .navbar-header.page-scroll
+            button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-ex1-collapse')
                 span.sr-only Toggle navigation
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
             a.navbar-brand(href='/index') Fidget Remote
-        // Collect the nav links, forms, and other content for toggling
-        #bs-example-navbar-collapse-1.collapse.navbar-collapse
-            ul.nav.navbar-nav.navbar-left
+        //
+           Collect the nav links, forms, and other content for toggling
+        .collapse.navbar-collapse.navbar-ex1-collapse
+            ul.nav.navbar-nav
+                //
+                   Hidden li included to remove active class from about link when scrolled up past about section
+                li.hidden
+                    a(href='#page-top')
+                li.page-scroll
+                    a(href='#about') About
                 li
                     a(href='/search') Search
 
