--- a/public/css/splash.css
+++ b/public/css/splash.css
@@ -3,6 +3,45 @@ html{
 }
 
 body{
-    height:100%;
+
+    text-align: center;
     background-color: #6441A5;
+}
+
+@font-face {
+    font-family: 'Entypo';
+    src: url('/lib/Entypo%20@font-face/entypo.eot'); /* IE9 Compat Modes */
+    src: local("&#128187"),
+        url('/lib/Entypo%20@font-face/entypo.woff') format('woff'), /* Modern Browsers */
+        url('/lib/Entypo%20@font-face/entypo.ttf')  format('truetype'), /* Safari, Android, iOS */
+        url('/lib/Entypo%20@font-face/entypo.svg') format('svg'); /* Legacy iOS */
+}
+
+.logo {
+    font-family: "Entypo",sans-serif;
+    font-size: 150px;
+    color: #fff;
+}
+
+.name{
+    color:#fff;
+    font-size:50px;
+    font-family: "Lato",sans-serif;
+}
+
+.thin{
+    font-weight: lighter;
+    font-style: italic;
+}
+
+.thick{
+    font-weight: bold;
+    font-style: oblique;
+}
+
+.subtitle{
+    color:#fff;
+    font-family: "Lato";
+    font-size: 30px;
+    font-style: italic;
 }
