--- a/public/views/splash.jade
+++ b/public/views/splash.jade
@@ -4,6 +4,16 @@
 
 html
     head
+        link(href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css')
         link(rel="stylesheet" href="/css/splash.css")
     body
         .container
+
+            span.logo &#128187;
+            h1.name
+                span.thin Fidget
+                span.thick Remote
+
+            span.subtitle Fidget Remote is currently under construction.
+                br
+                |Check back in a bit.
