Added the Twtitter follow button on the splash page.

--- a/public/views/splash.jade
+++ b/public/views/splash.jade
@@ -17,3 +17,9 @@ html
             span.subtitle Fidget Remote is currently under construction.
                 br
                 |Check back in a bit.
+
+
+            section(id="social")
+                a.twitter-follow-button(href='https://twitter.com/FidgetRemote', data-show-count='false', data-lang='en') Follow @FidgetRemote
+                script
+                    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
