--- a/public/js/templates/screen.html
+++ b/public/js/templates/screen.html
@@ -1,5 +1,4 @@
 <div>
-    <span class='stream-status'>{{channel.status}}</span>
-    <player channel="channel"/>
-
+    <span class='stream-status thick thick-status'>{{channel.status}}</span>
+    <player class="inline" channel="channel"/>
 </div>
