--- a/public/js/templates/twitchStream.html
+++ b/public/js/templates/twitchStream.html
@@ -1,12 +1,12 @@
 <div class="stream">
-    <span class="stream-status">{{stream.channel.status}}</span>
+    <span class="stream-status">{{stream.channel.status}}</span>.
     <input type="hidden" value="{{stream.channel.name}}"/>
       <img ng-click="playStream({{stream.channel.name}})" ng-src="{{ stream.preview.large }}" alt="{{ stream.channel.display_name }}" class="thumbnail" />
     <div>
         <span class="glyphicon glyphicon-user"></span>
-            {{ stream.channel.display_name }}
+        <span class="thin">{{ stream.channel.display_name }}</span>
         <span class="pull-right">
-            {{ stream.viewers }} Viewers
+            <span class="thin">{{ stream.viewers | number }} Viewers</span>
             <span class="glyphicon glyphicon-eye-open"></span>
         </span>
     </div>
